--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "dependencies/Standards-SkeletalInventories"]
 	path = dependencies/Standards-SkeletalInventories
 	url = https://github.com/RDFBones/Standards-SkeletalInventories.git
+[submodule "dependencies/Phaleron-SkeletalInventory"]
+	path = dependencies/Phaleron-SkeletalInventory
+	url = git@github.com:RDFBones/Phaleron-SkeletalInventory.git
